# lambda

./: CMakeLists.txt  main.cpp
include/: lambda.h  ndarray.h  utils.h
src/: lambda.cpp
